--- a/ml635j/setuptorch.ipynb
+++ b/ml635j/setuptorch.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# setup paperspace fast-ai based VM for torch"
+    "# Setup paperspace fast-ai based VM for torchvision"
    ]
   },
   {
@@ -54,21 +54,21 @@
      "text": [
       "Hit:1 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
       "Get:2 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-      "Get:3 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-      "Get:4 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+      "Get:3 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+      "Get:4 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
       "Get:5 http://ppa.launchpad.net/git-core/ppa/ubuntu bionic InRelease [20.8 kB]\n",
-      "Get:6 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2830 kB]\n",
-      "Get:7 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2297 kB]\n",
-      "Get:8 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [22.8 kB]\n",
-      "Get:9 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [982 kB]\n",
-      "Get:10 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1517 kB]\n",
-      "Get:11 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [29.8 kB]\n",
-      "Get:12 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3293 kB]\n",
-      "Get:13 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1040 kB]\n",
-      "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports/main amd64 Packages [12.2 kB]\n",
-      "Get:15 http://archive.ubuntu.com/ubuntu bionic-backports/universe amd64 Packages [12.9 kB]\n",
-      "Get:16 http://ppa.launchpad.net/git-core/ppa/ubuntu bionic/main amd64 Packages [3163 B]\n",
-      "Fetched 12.3 MB in 2s (7484 kB/s)\n",
+      "Get:6 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1040 kB]\n",
+      "Get:7 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [29.8 kB]\n",
+      "Get:8 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3294 kB]\n",
+      "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2297 kB]\n",
+      "Get:10 http://archive.ubuntu.com/ubuntu bionic-backports/main amd64 Packages [12.2 kB]\n",
+      "Get:11 http://archive.ubuntu.com/ubuntu bionic-backports/universe amd64 Packages [12.9 kB]\n",
+      "Get:12 http://ppa.launchpad.net/git-core/ppa/ubuntu bionic/main amd64 Packages [3163 B]\n",
+      "Get:13 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2861 kB]\n",
+      "Get:14 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1006 kB]\n",
+      "Get:15 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1521 kB]\n",
+      "Get:16 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [22.8 kB]\n",
+      "Fetched 12.4 MB in 2s (6868 kB/s)\n",
       "Reading package lists...\n",
       "Building dependency tree...\n",
       "Reading state information...\n",
@@ -414,7 +414,7 @@
       "Get:228 http://archive.ubuntu.com/ubuntu bionic/universe amd64 va-driver-all amd64 2.1.0-3 [4376 B]\n",
       "Get:229 http://archive.ubuntu.com/ubuntu bionic/main amd64 vdpau-driver-all amd64 1.1.1-3ubuntu1 [4674 B]\n",
       "Get:230 http://archive.ubuntu.com/ubuntu bionic/universe amd64 proj-bin amd64 4.9.3-2 [32.3 kB]\n",
-      "Fetched 131 MB in 6s (22.4 MB/s)\n",
+      "Fetched 131 MB in 11s (11.6 MB/s)\n",
       "Selecting previously unselected package libogg0:amd64.\r\n",
       "(Reading database ... \r",
       "(Reading database ... 5%\r",
@@ -1161,8 +1161,8 @@
       "Setting up tzdata (2022a-0ubuntu0.18.04) ...\r\n",
       "\r\n",
       "Current default time zone: 'Etc/UTC'\r\n",
-      "Local time is now:      Wed Jun 15 15:56:47 UTC 2022.\r\n",
-      "Universal Time is now:  Wed Jun 15 15:56:47 UTC 2022.\r\n",
+      "Local time is now:      Fri Jun 17 18:58:19 UTC 2022.\r\n",
+      "Universal Time is now:  Fri Jun 17 18:58:19 UTC 2022.\r\n",
       "Run 'dpkg-reconfigure tzdata' if you wish to change it.\r\n",
       "\r\n",
       "Setting up libcharls1:amd64 (1.1.0+dfsg-2) ...\r\n",
@@ -1417,17 +1417,17 @@
       "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
       "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: matplotlib>=2.1.0 in /opt/conda/lib/python3.7/site-packages (from pycocotools) (3.4.3)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from pycocotools) (1.21.2)\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from pycocotools) (1.21.2)\n",
+      "Requirement already satisfied: matplotlib>=2.1.0 in /opt/conda/lib/python3.7/site-packages (from pycocotools) (3.4.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (2.4.7)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (8.4.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (1.3.2)\n",
       "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (8.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib>=2.1.0->pycocotools) (2.4.7)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.7->matplotlib>=2.1.0->pycocotools) (1.16.0)\n",
       "Building wheels for collected packages: pycocotools\n",
       "  Building wheel for pycocotools (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pycocotools: filename=pycocotools-2.0.4-cp37-cp37m-linux_x86_64.whl size=273779 sha256=7cb96933bc4b07e77dcd1cc108c6fb58837b673e8429ca0ec05f6d3c2d20cbf3\n",
+      "\u001b[?25h  Created wheel for pycocotools: filename=pycocotools-2.0.4-cp37-cp37m-linux_x86_64.whl size=273790 sha256=782ea0e2ec1635be322095f141c4007dccc37fcc9507ce71e8cafe9f613dca88\n",
       "  Stored in directory: /root/.cache/pip/wheels/a3/5f/fa/f011e578cc76e1fc5be8dce30b3eb9fd00f337e744b3bba59b\n",
       "Successfully built pycocotools\n",
       "Installing collected packages: pycocotools\n",
