--- a/ml635epps/ir.ipynb
+++ b/ml635epps/ir.ipynb
@@ -36,12 +36,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "execution": {
      "iopub.execute_input": "2022-06-11T17:47:14.128343Z",
      "iopub.status.busy": "2022-06-11T17:47:14.127889Z",
      "iopub.status.idle": "2022-06-11T17:47:16.473021Z",
      "shell.execute_reply": "2022-06-11T17:47:16.471236Z",
      "shell.execute_reply.started": "2022-06-11T17:47:14.128278Z"
+    },
+    "jupyter": {
+     "outputs_hidden": true
     },
     "tags": []
    },
@@ -354,6 +358,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": true,
     "execution": {
      "iopub.execute_input": "2022-06-11T17:48:59.267200Z",
      "iopub.status.busy": "2022-06-11T17:48:59.266814Z",
@@ -372,6 +377,9 @@
      "user_tz": 240
     },
     "id": "M3-sRIuiuYDh",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "outputId": "b97165ba-2a42-4df2-8c2d-982be162c3fa",
     "tags": []
    },
@@ -421,13 +429,18 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "execution": {
      "iopub.execute_input": "2022-06-11T17:53:48.790363Z",
      "iopub.status.busy": "2022-06-11T17:53:48.789362Z",
      "iopub.status.idle": "2022-06-11T17:54:46.353459Z",
      "shell.execute_reply": "2022-06-11T17:54:46.349498Z",
      "shell.execute_reply.started": "2022-06-11T17:53:48.790300Z"
-    }
+    },
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -2283,7 +2296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
